--- a/data_loader/novel_load.ipynb
+++ b/data_loader/novel_load.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%autoreload 2\n",
+    "# %autoreload 2\n",
     "\n",
     "import novel\n",
     "from pprint import pprint\n",
     "# print(dir(novel))\n",
     "\n",
-    "data_loader = novel.DataLoader('../data/narou')\n",
+    "data_loader = novel.DataLoader(novel.Dataset('../data/narou'))\n",
     "\n",
     "counter = 0\n",
     "for line in data_loader:\n",
