--- a/data_loader/novel_load.ipynb
+++ b/data_loader/novel_load.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,58 @@
     "    if counter > 10:\n",
     "        break\n",
     "    # pprint(line.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['N7975CR', 'N3556O', 'N8304FA', 'N0654GG', 'N4029BS', 'N2379EU', 'N5691DD', 'N3386DB', 'N0339DN', 'N2172GB']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "basedir = Path('../data/narou')\n",
+    "paths = list(basedir.glob('*/N*'))[:10]\n",
+    "print(list(map(lambda path: path.name, paths)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['N7975CR',\n",
+       " 'N3556O',\n",
+       " 'N8304FA',\n",
+       " 'N0654GG',\n",
+       " 'N4029BS',\n",
+       " 'N2379EU',\n",
+       " 'N5691DD',\n",
+       " 'N3386DB',\n",
+       " 'N0339DN',\n",
+       " 'N2172GB']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset = novel.Dataset('../data/narou')\n",
+    "\n",
+    "list(map(lambda novel: novel.ncode, list(dataset)[:10]))"
    ]
   }
  ],
